# combinatorial-assignment

./: .gitignore  advanced_case.py  basic_case.py  constraints.py  data_definitions.py  pyproject.toml  technology_statement.md
