[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "skyrimer",email = "chekmenev2004@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gurobipy (>=13.0.0,<14.0.0)",
    "black (>=25.12.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
